--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -48,8 +48,9 @@ $nav-st-font-size: 15px;
         border-radius: 35px;
         padding: 15px 25px;
         background-image: linear-gradient(to bottom right, $colour-secondary, $colour-primary);
-        color: white;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         text-decoration: none;
+        color: white;
 
 
     }
