--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -3,18 +3,23 @@ $font-size-for-instructions: 15px;
 .instructions {
     margin-left: 20px;
     font-size: $font-size-for-instructions;
-    // how would i do this for just the h1 tag
+    // how would i do this for just the h1 tag without giving it class name
     &__h1 {
         font-size: 20px;
     }
     // create a function here for all 3 ? 
+
     &__1 {
         display: flex;
         flex-direction: row;
-    
     }
+// how to overlay
         &__1--num {
             margin-right: $margin-for-num;
+            align-self: center;
+            border: solid;
+            border-radius: 35px;
+            padding: 2px 5px
         }
         &__1--txt {
             border-radius: 20px;
@@ -22,5 +27,48 @@ $font-size-for-instructions: 15px;
             background-color: lighten(#E5E4E2, 5%);
             font-weight: bold;
             box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1);
+            margin-bottom: 20px;
+        }
+    &__2 {
+        display: flex;
+        flex-direction: row;
+    }
+
+        &__2--num {
+            margin-right: $margin-for-num;
+                align-self: center;
+                border: solid;
+                border-radius: 35px;
+                padding: 2px 5px        }
+
+        &__2--txt {
+            border-radius: 20px;
+            padding: 20px 100px 20px 90px;
+            background-color: lighten(#E5E4E2, 5%);
+            font-weight: bold;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+        }
+    &__3 {
+        display: flex;
+        flex-direction: row;
+    }
+
+        &__3--num {
+            margin-right: $margin-for-num;
+                align-self: center;
+                border: solid;
+                border-radius: 35px;
+                padding: 2px 5px        
+            }
+
+        &__3--txt {
+            border-radius: 20px;
+            padding: 20px 50px 20px 60px;
+            background-color: lighten(#E5E4E2, 5%);
+            font-weight: bold;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+            white-space: nowrap;
         }
 }
